zarf/k8s/tawny/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tawny-web
  namespace: tawny
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tawny-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tawny-web
    spec:
      containers:
        - image: danielmichaels/tawny
          imagePullPolicy: Always
          name: tawny-web
          command:
            - "app"
            - "serve"
            - "--web"
          ports:
            - containerPort: 9091
              name: tawny-web
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tawny-api
  namespace: tawny
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tawny-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tawny-api
    spec:
      containers:
        - image: danielmichaels/tawny
          imagePullPolicy: Always
          name: tawny-api
          command:
            - "entrypoint"
            - "--api"
          ports:
            - containerPort: 9091
              name: tawny-web
              protocol: TCP
