zarf/k8s/tawny/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tawny-web-ingress
  namespace: tawny
  labels:
    tawny.sh/name: tawny-web-ingress
    tawny.sh/component: tawny-ingress
    tawny.sh/part-of: tawny-core
    tawny.sh/managed-by: tawny-core
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`tawny.internal`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: tawny-web-svc
          namespace: tawny
          port: 9091
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tawny-api-ingress
  namespace: tawny
  labels:
    tawny.sh/name: tawny-web-ingress
    tawny.sh/component: tawny-ingress
    tawny.sh/part-of: tawny-core
    tawny.sh/managed-by: tawny-core
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api.tawny.internal`)
      services:
        - kind: Service
          passHostHeader: true
          name: tawny-api-svc
          namespace: tawny
          port: 9090
